--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.WelcomeActivity"></activity>
+        <activity android:name=".activities.Restaurant"></activity>
+        <activity android:name=".activities.WesternFood" />
+        <activity android:name=".activities.IndonesianFood" />
+        <activity android:name=".activities.WelcomeActivity" />
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
